huge Gulp refactor

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        
+        <link rel="stylesheet" type="text/css" href="demo.index.css" />
+        
         <title>autocompleted-select example</title>
     </head>
     <body>
